# src/Routes/api-v1/routes.js
@@ -2,6 +2,7 @@ import { Router } from "express";
 import streetRoute from "./street/Street";
 import sewerRoute from "./sewer/Sewer";
 import powerRoute from "./power/Power";
+import securityRoute from "./power/Power";
 import authRouter from "./oauthRoute";
 import { isAuthenticated } from "../../middleware/auth";
 import swaggerRouter from "../swaggerRoute";
@@ -11,6 +12,7 @@ const Route = Router();
 Route.use("/api/v1/street", streetRoute);
 Route.use("/api/v1/sewer", sewerRoute);
 Route.use("/api/v1/power", powerRoute);
+Route.use("/api/v1/security", securityRoute);
 Route.use("/user", authRouter);
 Route.use(isAuthenticated);
 Route.use("/", swaggerRouter);
